MyProject/force-app/main/default/objects/student__c/fields/Aadhar_ID__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_ID__c</fullName>
    <label>Aadhar ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>