MyProject/force-app/main/default/objects/student__c/fields/Collage_Name__c.field-meta.xml
<CustomField>
    <fullName>Collage_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collage</label>
    <referenceTo>Collage__c</referenceTo>
    <relationshipLabel>students</relationshipLabel>
    <relationshipName>students</relationshipName>
    <type>Lookup</type>
</CustomField>