MyProject/force-app/main/default/objects/student__c/fields/female__c.field-meta.xml
<CustomField>
    <fullName>female__c</fullName>
    <description>male or female</description>
    <inlineHelpText>any pro</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>