MyProject/force-app/main/default/objects/student__c/fields/Guardian_Contact__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Contact__c</fullName>
    <label>Guardian Contact</label>
    <type>Phone</type>
</CustomField>