MyProject/force-app/main/default/objects/student__c/fields/Previous_School_Collage__c.field-meta.xml
<CustomField>
    <fullName>Previous_School_Collage__c</fullName>
    <label>Previous School/Collage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>