MyProject/force-app/main/default/objects/student__c/fields/Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address__c</fullName>
    <label>Residential Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>