MyProject/force-app/main/default/objects/student__c/fields/Scholarship_Approval__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scholarship Approval</label>
    <type>Checkbox</type>
</CustomField>