MyProject/force-app/main/default/objects/student__c/fields/Scholarship_Apprval_Rejsction_Status__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Apprval_Rejsction_Status__c</fullName>
    <label>Scholarship Apprval/Rejsction Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>