MyProject/force-app/main/default/objects/student__c/fields/Scholarship_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Request_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scholarship Request Name</label>
    <referenceTo>Scholarship_Request__c</referenceTo>
    <relationshipLabel>students</relationshipLabel>
    <relationshipName>students</relationshipName>
    <type>Lookup</type>
</CustomField>