MyProject/force-app/main/default/objects/student__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <length>10</length>
    <type>Text</type>
</CustomField>