MyProject/force-app/main/default/objects/student__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st – First</fullName>
            </value>
            <value>
                <fullName>2nd – Second</fullName>
            </value>
            <value>
                <fullName>3rd – Third</fullName>
            </value>
            <value>
                <fullName>4th – Fourth</fullName>
            </value>
            <value>
                <fullName>5th – Fifth</fullName>
            </value>
            <value>
                <fullName>6th – Sixth</fullName>
            </value>
            <value>
                <fullName>7th – Seventh</fullName>
            </value>
            <value>
                <fullName>8th – Eighth</fullName>
            </value>
            <value>
                <fullName>9th – Ninth</fullName>
            </value>
            <value>
                <fullName>10th – Tenth</fullName>
            </value>
            <value>
                <fullName>11th – Eleventh</fullName>
            </value>
            <value>
                <fullName>12th – Twelfth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>