MyProject/force-app/main/default/objects/student__c/fields/Student_id__c.field-meta.xml
<CustomField>
    <fullName>Student_id__c</fullName>
    <displayFormat>MI-{0000}</displayFormat>
    <label>Student id</label>
    <type>AutoNumber</type>
</CustomField>