MyProject/force-app/main/default/objects/student__c/fields/textareaL__c.field-meta.xml
<CustomField>
    <fullName>textareaL__c</fullName>
    <label>textareaL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>