MyProject/force-app/main/default/objects/student__c/fields/Total_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees_Paid__c</fullName>
    <label>Total Fees Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>