MyProject/force-app/main/default/objects/student__c/fields/University_PRN__c.field-meta.xml
<CustomField>
    <fullName>University_PRN__c</fullName>
    <label>University PRN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>