MyProject/force-app/main/default/objects/student__c/recordTypes/Collage_Student.recordType-meta.xml
<RecordType>
    <fullName>Collage_Student</fullName>
    <active>true</active>
    <label>Collage Student</label>
</RecordType>