MyProject/force-app/main/default/objects/student__c/recordTypes/Student_Layout.recordType-meta.xml
<RecordType>
    <fullName>Student_Layout</fullName>
    <active>true</active>
    <label>Student Layout</label>
</RecordType>