MyProject/force-app/main/default/objects/student__c/validationRules/Validation_rule_for_PAN_Card.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_rule_for_PAN_Card</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( PAN_Card__c )),
 NOT( REGEX( PAN_Card__c ,&quot;[A-Z]{5}[0-9]{4}[A-Z]&quot;))
)</errorConditionFormula>
    <errorMessage>Invalid Pancard Number</errorMessage>
</ValidationRule>