MyProject/force-app/main/default/objects/student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scholarship_Apprval_Rejsction_Status__c</columns>
    <columns>Collage_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Scholarship_Request_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scholarship_Request_Name__c</field>
        <operation>equals</operation>
        <value>panjabrao deshmukh scholarship</value>
    </filters>
    <label>All</label>
</ListView>